<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/register_text"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/f_name" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/l_name" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password_again"/>


            <EditText
                android:id="@+id/birthday_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/birthday"/>

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/zip"
                android:inputType="number" />


            <LinearLayout
                android:id="@+id/referral_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/referral" />

                <RadioButton
                    android:id="@+id/ref_ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_family" />

                <RadioButton
                    android:id="@+id/community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/community" />

                <RadioButton
                    android:id="@+id/church"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/church" />

                <RadioButton
                    android:id="@+id/voluntary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voluntary" />

                <RadioButton
                    android:id="@+id/internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet" />

                <RadioButton
                    android:id="@+id/brochure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brochure" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_ref" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/services_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/services" />

                <CheckBox
                    android:id="@+id/chk_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_english" />

                <CheckBox
                    android:id="@+id/chk_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_job" />

                <CheckBox
                    android:id="@+id/chk_training"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_training" />

                <CheckBox
                    android:id="@+id/chk_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_tech" />

                <CheckBox
                    android:id="@+id/chk_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_other" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/site_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sites" />

                <RadioButton
                    android:id="@+id/site_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site0" />

                <RadioButton
                    android:id="@+id/site_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site1" />

                <RadioButton
                    android:id="@+id/site_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site2" />

                <RadioButton
                    android:id="@+id/site_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <RadioButton
                    android:id="@+id/morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <RadioButton
                    android:id="@+id/night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/trans_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <RadioButton
                    android:id="@+id/walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walk" />

                <RadioButton
                    android:id="@+id/car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car" />

                <RadioButton
                    android:id="@+id/pub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pub" />

                <RadioButton
                    android:id="@+id/drive_ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ff" />


            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>